--- a/Entain/package.json
+++ b/Entain/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@types/react-native-countdown-component": "^2.7.0",
     "axios": "^0.27.2",
+    "moment": "^2.29.3",
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-native": "0.68.2",
+    "react-native-countdown-component": "^2.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
